Реализация функции создания карточек

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div id="app">
+        <card-create :cards="cards"></card-create>
         <to-do-list :cards="cards"></to-do-list>
-        <card-create></card-create>
     </div>
 </body>
 </html>
