--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <div id="app">
-        <button id="modal-button" @click="modalClick">Создать карточку</button>
-        <card-create :modalOpen="modalOpen" :modalClick="modalClick"></card-create>
-        <to-do-list :column1="column1" :column2="column2" :column3="column3"></to-do-list>
+        <button id="modal-button" @click="modalOpen">Создать карточку</button>
+        <card-create :is-modal-open="isModalOpen" :column1="column1" :column2="column2" :column3="column3" @add-card="addCard" @modal-close="modalClose"></card-create>
+        <to-do-list :column1="column1" :column2="column2" :column3="column3" @move-to-column2="moveToColumn2"></to-do-list>
     </div>
 </body>
 </html>
